--- a/src/App.css
+++ b/src/App.css
@@ -1,1 +1,7 @@
 @import "~bootstrap/dist/css/bootstrap.min.css";
+
+main {
+  background-color: rgb(85, 62, 44);
+  min-height: 100vh;
+  color: wheat;
+}
